--- a/projekat/pom.xml
+++ b/projekat/pom.xml
@@ -43,6 +43,14 @@
 	 		<artifactId>springdoc-openapi-ui</artifactId>  
 	 		<version>1.6.4</version>  
 		</dependency>
+		<dependency>
+		<groupId>org.springframework.boot</groupId>
+		<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
+		<dependency>
+        	<groupId>org.postgresql</groupId>
+        	<artifactId>postgresql</artifactId>
+        </dependency>
 	</dependencies>
 
 	<build>
