--- a/projekat/pom.xml
+++ b/projekat/pom.xml
@@ -14,45 +14,53 @@
 	<packaging>war</packaging>
 	<name>projekat</name>
 	<description>ISA-banka krvi-projekat</description>
+	
 	<properties>
 		<java.version>17</java.version>
 	</properties>
+	
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
-
-		<dependency>
-			<groupId>com.mysql</groupId>
-			<artifactId>mysql-connector-j</artifactId>
-			<scope>runtime</scope>
-		</dependency>
+		
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-tomcat</artifactId>
 			<scope>provided</scope>
 		</dependency>
+		
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		
 		<dependency>  
 	 		<groupId>org.springdoc</groupId>  
 	 		<artifactId>springdoc-openapi-ui</artifactId>  
 	 		<version>1.6.4</version>  
 		</dependency>
+		
 		<dependency>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
+		
 		<dependency>
         	<groupId>org.postgresql</groupId>
         	<artifactId>postgresql</artifactId>
         </dependency>
+        
+        <!-- zavosnost za mapiranje modela na DTO i obrnuto -->
+        <dependency>
+		    <groupId>org.modelmapper</groupId>
+		    <artifactId>modelmapper</artifactId>
+		    <version>3.1.0</version>
+		</dependency>
 	</dependencies>
-
+	
 	<build>
 		<plugins>
 			<plugin>
