--- a/projekat/src/main/resources/application.properties
+++ b/projekat/src/main/resources/application.properties
@@ -4,7 +4,7 @@ server.port = 8084
 spring.datasource.driverClassName=org.postgresql.Driver
 
 #Navodi se baza koja se koristi
-spring.datasource.platform=postgres
+spring.sql.init.platform=postgres
 
 #Navodi se URL do baze koja je pokrenuta u lokalu na podrazumevanom portu 5432 i na serveru je kreirana šema baze pod nazivom "jpa"
 #https://www.pgadmin.org/docs/pgadmin4/4.14/schema_dialog.html (ako koristimo Hibernate za kreiranje tabela, SQL deo sa linka nije potreban)
@@ -26,10 +26,10 @@ spring.jpa.show-sql = true
 spring.jpa.properties.hibernate.format_sql=true
 
 #https://docs.spring.io/spring-boot/docs/2.1.0.M1/reference/html/howto-database-initialization.html#howto-initialize-a-database-using-spring-jdbc
-spring.datasource.initialization-mode=always
+spring.sql.init.mode=always
 
 #https://stackoverflow.com/questions/43905119/postgres-error-method-org-postgresql-jdbc-pgconnection-createclob-is-not-imple
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
 #Hibernate optimizacija SQL upita za Postgres bazu
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQL95Dialect
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
