--- a/projekat/pom.xml
+++ b/projekat/pom.xml
@@ -48,16 +48,45 @@
 		<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
 		
+		<!-- ukljucena podrska za Spring Security -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+		
+		<!-- ukljucena podrska za rad sa JWT -->
+		<dependency>
+			<groupId>io.jsonwebtoken</groupId>
+			<artifactId>jjwt</artifactId>
+			<version>0.6.0</version>
+		</dependency>
+		
 		<dependency>
         	<groupId>org.postgresql</groupId>
         	<artifactId>postgresql</artifactId>
         </dependency>
         
-        <!-- zavosnost za mapiranje modela na DTO i obrnuto -->
+        <!-- zavisnost za mapiranje modela na DTO i obrnuto -->
         <dependency>
 		    <groupId>org.modelmapper</groupId>
 		    <artifactId>modelmapper</artifactId>
 		    <version>3.1.0</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-annotations</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-devtools</artifactId>
+			<optional>true</optional>
 		</dependency>
 	</dependencies>
 	
