implemented sending email

--- a/ISA-backend/src/main/resources/application.properties
+++ b/ISA-backend/src/main/resources/application.properties
@@ -37,3 +37,11 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQL95Dial
 spring.jpa.open-in-view=false
 
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
+
+# Za slanje mejla prilikom registracije
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=isaprojekatbankekrvi@gmail.com
+spring.mail.password=jmefyjaohnfxospa
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
