--- a/ISA-backend/pom.xml
+++ b/ISA-backend/pom.xml
@@ -31,6 +31,13 @@
 			<artifactId>spring-boot-starter-tomcat</artifactId>
 		</dependency>
 
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-mail</artifactId>
+			<version>2.5.6</version>
+		</dependency>
+
 		<dependency>  
 	 		<groupId>org.springdoc</groupId>  
 	 		<artifactId>springdoc-openapi-ui</artifactId>  
