--- a/ISA-frontend/package.json
+++ b/ISA-frontend/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "^14.1.0",
     "@angular/platform-browser-dynamic": "^14.1.0",
     "@angular/router": "^14.1.0",
+    "@auth0/angular-jwt": "^5.1.2",
     "@syncfusion/ej2-angular-schedule": "^20.4.38",
     "@syncfusion/ej2-material-theme": "^20.4.38",
     "angular-material": "^0.8.0",
